--- a/static/css/admin_courses.css
+++ b/static/css/admin_courses.css
@@ -44,9 +44,112 @@
 
     .courses-content{
         box-sizing: border-box;
-        .courses-content-filter{
-            box-sizing: border-box;
 
+        .courses-content-search{
+            padding: 1rem;
+            box-sizing: border-box;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            background-color: white;
+            border: 2px solid #0b54ae;
+            border-bottom: none;
+            
+
+            .field-input{
+                padding: 0.3rem;
+                font-size: 1rem;
+                border-radius: 5px;
+                
+            }
+
+            #courses-content-searchBar{
+                box-sizing: border-box;
+                width: 100%;
+            
+            
+                .search-label{
+                    box-sizing: border-box;
+                    width: 90%;
+                    max-height: 100%;
+                    border: 1px solid black;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+
+                    .search-icon{
+                        font-size: 1.2rem;
+                    }
+
+                    #searchTerm{
+                        width: 90%;
+                        border: none;
+                        outline: none;
+                    }
+
+                    
+                }
+
+                .search-label:has(#searchTerm:focus){
+                    border: 2px solid black;
+                }
+
+                
+            }
+
+            #courses-content-sortForm{
+                display: grid;
+                grid-template-columns: 1fr 1fr 0.3fr;
+                .sort-field{
+
+                    .sort-label{
+                        .sort-name{
+                        font-size: 1rem;
+                        }
+
+                        .sort-icon{
+                            font-size: 1.3rem;
+                        }
+
+                        #sortAsc, #sortDesc{
+                            width: 15px;
+                            height: 15px;
+                        }
+
+                        .select-input{
+                            width: 60%;
+                        }
+                    }
+
+                
+
+                    
+                }
+
+                .sort-submit{
+
+                    .sort-btn{
+                        box-sizing: border-box;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 0.3rem 0.8rem;
+
+                        font-size: 1rem;
+                        background-color: #0b54ae;
+                        color: white;
+                        border-radius: 5px;
+                        border: none;
+                        cursor: pointer;
+                        transition: all 0.2s ease-in-out;
+
+                        &:hover{
+                            background-color: #013575;
+                        }
+                    }
+
+                    
+                }
+            }
         }
 
         .courses-content-table{
@@ -70,8 +173,8 @@
             }
 
             .courses-table-head{
-                border: 1px solid rgb(220, 220, 220);
-
+                border: 2px solid #0b54ae;
+                border-top: none;
             }
 
             .courses-table-data{
@@ -92,7 +195,7 @@
                     }
 
 
-                    .edit-icon, .delete-icon{
+                    .edit-icon, .delete-icon, .approve-icon, .deny-icon{
                         font-size: 1.4rem;
                         transition: all 0.2s ease-in-out;
 
@@ -131,6 +234,44 @@
                             }
                         }
                     }
+
+                    .course-approve-btn{
+                        background-color: white;
+                        padding: 0.3rem;
+                        border: none;
+                        cursor: pointer;
+                        
+                        .approve-icon{
+                            color: rgb(15, 170, 15);
+
+
+                        }
+
+                        &:hover{
+                            .delete-icon{
+                                color: rgb(2, 120, 2);
+                            }
+                        }
+                    }
+
+                    .course-deny-btn{
+                        background-color: white;
+                        padding: 0.3rem;
+                        border: none;
+                        cursor: pointer;
+                        
+                        .deny-icon{
+                            color: #324a78;
+
+
+                        }
+
+                        &:hover{
+                            .delete-icon{
+                                color: #152543;
+                            }
+                        }
+                    }
                 }
                 
 
@@ -142,6 +283,60 @@
                 
             }
 
+        }
+    }
+}
+
+.card-content-action {
+    text-align: right;
+    .cancel-btn {
+        background-color: #f0f0f0;
+        color: #333;
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 6px;
+        font-size: 0.95rem;
+        font-weight: 500;
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+
+        &:hover {
+            background-color: #d9d9d9;
+            color: #000;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        &:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+    }
+
+    .confirm-btn {
+        background-color: #d90303;
+        color: #fff;
+        padding: 0.5rem 1rem;
+        border: none;
+        border-radius: 6px;
+        font-size: 0.95rem;
+        font-weight: 500;
+        margin-left: .5rem;
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+
+        &:hover {
+            background-color: #a40000;
+            color: #ffe5e5;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        &:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
     }
 }
