--- a/static/css/lesson.css
+++ b/static/css/lesson.css
@@ -218,6 +218,13 @@ iframe {
     border-radius: 1rem;
 }
 
+video {
+    display: none;
+    width: 100%;
+    height: 75%;
+    border-radius: 1rem;
+}
+
 .name-lesson {
     padding: 2rem;
     cursor: pointer;
