--- a/templates/lessons/admin_lessons_update.html
+++ b/templates/lessons/admin_lessons_update.html
@@ -69,6 +69,34 @@
                     </label>
                     
                 </div>
+                <h3 class="align-center">Or</h3>
+                <div class="form-field lesson-youtube-field">
+                    <label for="lessonYoutube" class="form-label">
+                        <span class="field-name lesson-video">Youtube URL of Lesson</span>
+                        <input 
+                            type="text"
+                            id="lessonYoutube"
+                            name="lessonYoutube"
+                            class="form-input lesson-youtube-input"
+                            placeholder="Youtube URL"
+                        />
+                        <!-- <video 
+                            id="lesson-video-preview" 
+                            style="display: none;"
+                            controls 
+                            width="100%">
+                        </video> -->
+                        <iframe frameborder="0" allowfullscreen
+                            id="lesson-youtube-preview" 
+                            style="display: none;"
+                            controls 
+                            width="100%"
+                            src="">
+
+                        </iframe>
+                    </label>
+                    
+                </div>
                 <div class="form-field lesson-content-field">
                     <label for="lessonContent" class="form-label">
                         <span class="field-name lesson-name">Lesson Content</span>
