--- a/templates/courses/admin_courses_create.html
+++ b/templates/courses/admin_courses_create.html
@@ -165,7 +165,7 @@
                                     class="lesson-video-preview" 
                                     style="display: none;"
                                     controls 
-                                    width="400">
+                                    width="100%">
                                 </video>
                             </label>
                             
