--- a/templates/layout/admin_base.html
+++ b/templates/layout/admin_base.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="header-account align-center">
                     <img 
-                        src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                        src="{{ avatar }}"
                         class="account-avatar"
                     />
                     <i class='bx bxs-down-arrow submenu-icon'></i>  
