--- a/templates/lessons/admin_lessons_detail.html
+++ b/templates/lessons/admin_lessons_detail.html
@@ -39,6 +39,15 @@
                     controls 
                     width="100%">
                 </video> 
+                <iframe frameborder="0" allowfullscreen
+                    id="lesson-youtube" 
+                    style="display: none;"
+                    controls 
+                    width="100%"
+                    height="450px"
+                    src="">
+
+                </iframe>
             </div>
             <div class="lesson-info-card">
                 <h3 class="card-name">Lesson Content</h3>
