--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -221,6 +221,6 @@
 
     <!-- custom js -->
     <script src="/static/js/script.js"></script>
-    <script src="/static/js/teacher.js"></script>
+    <script type="module" src="/static/js/teacher.js"></script>
 </body>
 </html>
