--- a/templates/course.html
+++ b/templates/course.html
@@ -259,6 +259,6 @@
 
     <!-- custom js -->
     <script src="/static/js/script.js"></script>
-    <script src="/static/js/course.js"></script>
+    <script type="module" src="/static/js/course.js"></script>
 </body>
 </html>
