--- a/templates/lessons/admin_lessons_update.html
+++ b/templates/lessons/admin_lessons_update.html
@@ -91,6 +91,7 @@
                             style="display: none;"
                             controls 
                             width="100%"
+                            height="450px"
                             src="">
 
                         </iframe>
